[package]
name = "my-settings-reader"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
background-reader = ["my-settings-reader-macros/background-reader"]

[dependencies]
my-settings-reader-macros = { path = "../my-settings-reader-macros" }
flurl = { version = "0.4.1", git = "https://github.com/MyJetTools/fl-url.git" }
serde_yaml = "*"
