[package]
name = "my-settings-reader"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
background-reader = ["my-settings-reader-macros/background-reader"]

[dependencies]
my-settings-reader-macros = { path = "../my-settings-reader-macros" }
flurl = { tag = "0.6.0", git = "https://github.com/MyJetTools/fl-url.git" }
serde_yaml = "*"
tokio = { version = "*" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
serde = "*"
