[package]
name = "utils"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flurl = { tag = "0.5.3", git = "https://github.com/MyJetTools/fl-url.git" }
serde_yaml = "*"
tokio = { version = "*" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
serde = "*"
